# GreenChef-Life-Moments

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: README.md  synthetic_cancellations.csv
docs/: MGT5905_Report_Final.docx  architecture.md  capstone-report.md  classification-methodology.md  economic-model.md
scripts/: analyze_results.py  generate_data.py  run_classification.py
src/life_moments/: __init__.py  classifier.py  config.py  economics.py  pipeline.py  prescreen.py  prompts.py  routing.py  schemas.py  synthetic.py  validation.py
tests/: test_economics.py  test_pipeline.py  test_prescreen.py  test_regression.py  test_routing.py  test_schemas.py  test_validation.py
tests/fixtures/: regression_cases.json
