[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "green-chef-life-moments"
version = "1.0.0"
description = "AI-assisted subscriber-retention classification pipeline (MGT 5905 capstone reference implementation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vignesh Anand" },
    { name = "Yash Mahadik" },
    { name = "Anrunya Patole" },
    { name = "Kshama Purohit" },
]
keywords = ["retention", "churn", "llm", "classification", "subscription", "analytics"]
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "python-dotenv>=1.0"]
dev = ["pytest>=7.4", "matplotlib>=3.7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
